# aoc2020

./: README.md  aoc2020.cabal  package.yaml
src/: Day01.hs  Day02.hs  Day06.hs  Day07.hs
