cabal-version: 1.12

name:           aoc2020
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/aoc2020#readme>
homepage:       https://github.com/githubuser/aoc2020#readme
bug-reports:    https://github.com/githubuser/aoc2020/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/aoc2020

executable day01
  main-is: Day01.hs
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , mtl
    , containers
    , unordered-containers
  default-language: Haskell2010

executable day02
  main-is: Day02.hs
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec
    , mtl
    , text
    , unordered-containers
  default-language: Haskell2010
